--- a/Models/SpokenDialogue/2025.01.20_MinMo.md
+++ b/Models/SpokenDialogue/2025.01.20_MinMo.md
@@ -93,6 +93,9 @@ The ***MinMo*** project web page is [this https URL](https://funaudiollm.github.
 
 ## 1·Introduction: 引言
 
+<details>
+<summary>展开原文</summary>
+
 Seamless voice interaction indicates that **a user experiences real-time, natural, relevant, and human-like spoken conversation with the system**.
 Facilitating seamless voice interaction poses great challenges:
 (1) the system needs to understand audio accurately and comprehensively, including comprehending the content and also paralinguistic cues in speech (e.g., emotion, prosody) as well as audio events;
@@ -118,7 +121,7 @@ Moreover, these models lack systematic evaluations of instruction-following capa
 
 In this work, we introduce a new multimodal large language model ***MinMo***, to address these limitations of existing aligned multimodal models.
 ***MinMo*** is trained on over 1.4 million hours of speech data, encompassing various tasks such as Speech-to-Text, Text-to-Speech, and Speech-to-Speech, as detailed in Table.02.
-This extensive training enables ***MinMo*** to achieve state-of-the-art (SOTA) performance across various benchmarks, as shown in Figure~\ref{fig:benchmark_radar}.
+This extensive training enables ***MinMo*** to achieve state-of-the-art (SOTA) performance across various benchmarks, as shown in Figure.01.
 We also apply methods that effectively mitigate catastrophic forgetting of the chat capabilities of the original text-LLM while enhancing voice comprehension and generation after training on such large-scale datasets.
 
 We also propose a novel voice decoder that balances structural simplicity and competitive voice generation performance.
@@ -140,6 +143,61 @@ Additionally, while most existing voice interaction systems only support control
 - We develop a mechanism that effectively facilitates full-duplex interactions with ***MinMo***.
 Specifically, we implement a full-duplex prediction module that harnesses the text LLM's semantic understanding capabilities to decide whether to continue system response, or concede, listen, and respond to new user query.
 For ***MinMo***, the speech-to-text latency is approximately 100ms; the full-duplex latency is approximately 600ms in theory and 800ms in practice.
+
+</details>
+<br>
+
+无缝声音交互意味着**用户可以体验到与系统的实时, 自然, 相关, 且人类般的口语对话**.
+推进无缝声音交互面临着巨大的挑战:
+1. 系统需要准确且全面地理解音频, 包括理解语音中内容和副语言线索 (如情感, 韵律) 以及音频事件;
+2. 系统被期望产生自然而富有表现力的语音响应;
+3. 系统应当提供与用户相关且合理的响应, 作为智能聊天机器人;
+4. 系统被期望支持全双工对话 (即同时进行双向通信), 即系统在说话时同时监听, 用户可以随时中断系统发言, 然后系统继续说话或放弃, 听取用户的新查询并提供相应的响应.
+
+近年来, 无缝声音交互系统已经获得了显著发展, 尤其是随着多模态大语言模型的发展, 如 [GPT-4o](2024.09.06_GPT-4o.md) 和 [Moshi](2024.09.17_Moshi.md).
+这些系统不仅产生自然而富有表现力的语音, 还能理解单词之外的线索, 如情感声调和音频事件.
+
+现有的语音交互的多模态语言模型可以分为两大类: **原生多模态模型 (Native Multimodal Models)** 和 **对齐多模态模型 (Aligned Multimodal Models)**.
+- 原生多模态模型, 如 [Moshi](2024.09.17_Moshi.md) 和 [GLM-4-Voice](2024.12.03_GLM-4-Voice.md)
+  - 特点: 通常使用仅解码器的 Transformer 架构作为主干, 在单个框架内同时对语音和文本模态进行理解和生成, 它们通常需要使用语音和文本数据进行预训练.
+  - 缺点: 它们有两个主要的局限性.
+    - 在语音离散化后, 语音 Token 序列通常是文本长度的两倍 (如 Moshi 的 12.5 个 Token/秒). 这一序列长度的差异随着模型尺寸增长会带来挑战, 如 175B [GPT-3](../TextLM/2020.05.28_GPT-3.md).
+    - 与文本相比, 语音数据稀缺, 导致语音-文本训练数据的高度失衡, 从而导致灾难性遗忘 ([Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md)).
+- 对齐多模态模型, 如 [LLaMA-Omni](2024.09.10_LLaMA-Omni.md) 和 [Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md)
+  - 特点: 集成语音能力但目标是维持现有预训练文本大语言模型的能力. 这使得模型中间输入仍然包含文本.
+  - 缺点:
+    - 这些基于对齐的模型通常在有限的语音数据 (LLaMA-Omni 200K 样本, Freeze-Omni 120K 小时) 上进行训练, 引发了更大的语音数据及对模型能力影响的疑问, 以及原始文本大语言模型的对话能力是否有所损害.
+    - 这些模型尚未对广泛的语音任务进行深入研究, 例如语音翻译, 情感识别, 说话人分析, 语言识别, 以及音频事件检测.
+    - 这些模型缺乏对丰富且细腻说话风格的指令跟随能力方面的系统性评估, 以及缺乏对全双工对话能力的开发和评估, 以实现无缝声音交互.
+
+在本文中, 我们提出了一种新的多模态大语言模型 ***MinMo***, 以解决这些现有对齐多模态模型的局限性.
+
+***MinMo*** 在超过 1.4 百万小时的语音数据上训练, 涵盖了各种任务 (语音转文本, 文本转语音, 语音到语音) 如表格 02 所示.
+
+这种广泛训练使得 ***MinMo*** 在各种基准测试上达到了 SoTA 性能, 如图 01 所示.
+
+![](Images/2025.01.20_MinMo_Fig.01.png)
+
+我们还应用了有效缓解在大规模数据集上训练后原始文本大语言模型对话能力灾难性遗忘同时增强语音理解和生成的方法.
+
+我们还提出了一个新式声音解码器以平衡结构简单性和具有竞争力的声音生成性能.
+- LLaMA-Omni 使用了非自回归流式 Transformer, 接受 LLM 的输出隐藏状态作为输入, 并采用 CTC 来预测响应对应的离散语音 Token 序列. 这种方法相比自回归语音解码器, 表现较差.
+- Freeze-Omni 使用了三种语音解码器, 包括 NAR 前缀语音解码器, NAR 语音解码器和 AR 语音解码器, 使得模型结构变得复杂.
+
+和上述策略不同, 我们为 ***MinMo*** 设计了 AR 流式 Transformer, 将 LLM 的输出隐藏状态和语音 Token 以固定比例混合, 如图 03 所示.
+
+我们的贡献总结如下:
+- 我们提出了 ***MinMo***, 一种端到端的对齐多模态大语言模型, 通过在 1.4 百万小时的音频数据, 涵盖广泛语音任务上进行多阶段对齐策略来使预训练文本大语言模型获得音频理解, 音频生成和端到端双工语音交互能力.
+  ***MinMo*** 在多个开源基准上获得了 SoTA 性能, 包括口语对话, 多语言语音识别, 语音翻译, 情感识别, 说话人分析等.
+  和之前的多模态模型受限于文本大语言模型能力的显著灾难性遗忘和在文本任务上的显著性能退化不同, ***MinMo*** 在文本大语言模型的原始能力上保持了最小损失.
+
+- 我们提出了一个用于流式端到端音频生成的新的对齐方法, 通过探索文本模型的隐藏层表示的使用, 作为声音解码器的输入来对齐音频输出模态.
+  实验结果表明我们的流式声音解码器有效地平衡了结构简单性, 低延迟, 以及高音频生成性能, 并优于之前的模型.
+  此外, 虽然大多数现有的声音交互系统只支持控制响应的内容, ***MinMo*** 增强了指令跟随能力, 并能够生成与用户指定的情感, 方言, 以及发音速度, 以及模仿特定声音, 其指令跟随准确率达到 98.4%.
+
+- 我们开发了一种机制, 有效地促进与 ***MinMo*** 的全双工交互.
+  具体来说, 我们实现了一个全双工预测模块, 利用文本 LLM 的语义理解能力来决定是否继续系统响应, 还是放弃, 听取, 和响应新的用户查询.
+  对于 ***MinMo***, 语音到文本延迟约为 100ms, 全双工延迟理论上约为 600ms, 实际上约为 800ms.
 
 ## 2·Related Works: 相关工作
 
@@ -203,7 +261,7 @@ The speech modality not only contains the content but also acoustic information 
 An intelligent multimodal spoken dialogue model should be able to comprehensively understand the acoustic information in input speech (e.g., emotion) and also ideally generate responses with specified emotions, dialects, and speaking rate, as well as mimicking specific voices, so that the system can achieve a deeper level of understanding and response in communication.
 Collaborative systems, such as [ParalinGPT](2023.12.23_ParalinGPT.md), [E-Chat](2023.12.31_E-chat.md), and [Spoken-LLM](2024.02.20_Spoken-LLM.md), incorporate paralinguistic features to enhance the understanding of acoustic information such as emotions.
 These systems can be cascaded with a style-controllable Text-to-Speech (TTS) system to generate responses with specific emotion, speaking rate, and volume.
-Significant progresses have been made in text-style controllable TTS, such as [Salle (TextrolSpeech)](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS](../Acoustic/2022.11.22_PromptTTS.md), [PromptTTS2](../Acoustic/2023.09.05_PromptTTS2.md), [InstructTTS](../Acoustic/2023.01.31_InstructTTS.md), and [ControlSpeech](2024.06.03_ControlSpeech.md).
+Significant progresses have been made in text-style controllable TTS, such as [Salle (TextrolSpeech)](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS](../Acoustic/2022.11.22_PromptTTS.md), [PromptTTS2](../Acoustic/2023.09.05_PromptTTS2.md), [InstructTTS](../Acoustic/2023.01.31_InstructTTS.md), and [ControlSpeech](../SpeechLM/2024.06.03_ControlSpeech.md).
 In contrast to these collaborative systems, [Moshi](2024.09.17_Moshi.md) uses a TTS engine with a single actor's voice and recorded monologues in over 70 speaking styles to synthesize training data to support understanding and generation of acoustic information in an end-to-end model.
 [GLM-4-Voice](2024.12.03_GLM-4-Voice.md) employs high-quality, multi-turn spoken dialogues tailored to specific speech style requirements, such as speaking rate, emotion, or dialect, to support style-controllable spoken dialogues.
 However, to the best of our knowledge, no previous work has demonstrated that aligned multimodal models can support style-controllable voice generation.
@@ -219,10 +277,10 @@ Figure.03 illustrates the model architecture of ***MinMo***.
 ***MinMo*** employs a lightweight modality alignment approach on a pretrained text LLM.
 Table.01 provides detailed descriptions of each module in ***MinMo***.
 
-The **Voice Encoder** is initialized with the pretrained SenseVoice-large encoder module ([FunAudioLLM](2024.07.04_FunAudioLLM.md)), which provides robust voice understanding capabilities and supports multilingual speech recognition, emotion recognition, and audio event detection.
+The **Voice Encoder** is initialized with the pretrained SenseVoice-large encoder module ([FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)), which provides robust voice understanding capabilities and supports multilingual speech recognition, emotion recognition, and audio event detection.
 The **Input Projector** consists of a randomly initialized two-layer Transformer combined with a CNN layer for dimensional alignment and downsampling.
 We use the [pretrained Qwen2.5-7B-instruct model [URL]](https://huggingface.co/Qwen/Qwen2.5-7B-Instruct) ([Qwen2.5](../TextLM/2024.12.19_Qwen2.5.md)) as the pre-trained text LLM, due to its outstanding performance on various benchmarks.
-We utilize the streaming audio generation mechanism of [CosyVoice 2](2024.12.13_CosyVoice2.md), due to its low latency and competitive speech synthesis performance.
+We utilize the streaming audio generation mechanism of [CosyVoice 2](../SpeechLM/2024.12.13_CosyVoice2.md), due to its low latency and competitive speech synthesis performance.
 For every batch of five text tokens received, we pass these tokens and their corresponding final hidden layer vectors simultaneously to the **Output Projector** and the **Voice Token LM**.
 The **Output Projector** is a single-layer linear module randomly initialized for dimensional alignment.
 The **Voice Token LM** uses the pretrained CosyVoice 2 LM module.
@@ -259,7 +317,7 @@ During training, a teacher forcing strategy is applied, and a special token is i
 Once the LLM's textual response is complete and the semantic vectors are exhausted, we insert a "turn of speech" token to signal the voice token LM that subsequent tokens should be speech tokens exclusively.
 The speech synthesis process concludes when the "end of speech" token is generated.
 
-For reconstructing waveforms from the speech tokens, we utilize an off-the-shelf streaming token2wav synthesizer, as described by [CosyVoice 2](2024.12.13_CosyVoice2.md).
+For reconstructing waveforms from the speech tokens, we utilize an off-the-shelf streaming token2wav synthesizer, as described by [CosyVoice 2](../SpeechLM/2024.12.13_CosyVoice2.md).
 The token2wav synthesizer incorporates a chunk-aware flow matching model and a mel-to-wave vocoder, capable of synthesizing waveforms in chunks of fifteen tokens.
 
 The theoretical latency of the voice decoder can be computed as follows:
@@ -296,7 +354,7 @@ The instructions are expanded to include natural language descriptions, generate
 The Speech-to-Speech data is primarily sourced through simulation, encompassing approximately 10,000 hours of multi-turn conversational speech and 100 hours of style-controllable multi-turn conversational speech.
 The method for simulating speech-to-speech chat data is as follows:
 
-- For text chat data primarily sourced from [Alpaca](../../Datasets/Alpaca.md) and [ShareGPT [URL]](https://sharegpt.com/), we utilize the zero-shot in-context generation method from [CosyVoice](2024.07.07_CosyVoice.md) to convert user text into user speech.
+- For text chat data primarily sourced from [Alpaca](../../Datasets/Alpaca.md) and [ShareGPT [URL]](https://sharegpt.com/), we utilize the zero-shot in-context generation method from [CosyVoice](../SpeechLM/2024.07.07_CosyVoice.md) to convert user text into user speech.
 We fine-tune CosyVoice's base model with 2 hours of data from a selected speaker to create a speech synthesis model for the target speaker, referred to as \textit{CosyVoice-SFT}.
 This model synthesizes the assistant's speech (i.e., system speech).
 The advantage of using zero-shot in-context generation for user speech synthesis is its ability to ensure diversity in the generated user speech, thereby enhancing the generalizability of MinMo.
@@ -380,11 +438,11 @@ Table~\ref{tab:multilingual_asr_performance} presents the results from different
 For Mandarin (ZH), Japanese (JA), Korean (KO), and Cantonese (YUE), we employ the character error rate (CER) for evaluating transcription performance.
 For English (EN), German (DE), French (FR), Russian (RU), Spanish (ES), and Italian (IT), the word error rate (WER) is utilized as the evaluation metric.
 Note that all baseline model results are reproduced and processed using the same procedures as conducted on ***MinMo***'s results, for fair comparisons.
-Post-processing is based on a modified [Whisper](2022.12.06_Whisper.md) normalizer, with modifications primarily for improved number normalization.
+Post-processing is based on a modified [Whisper](../SpeechLM/2022.12.06_Whisper.md) normalizer, with modifications primarily for improved number normalization.
 In Table~\ref{tab:multilingual_asr_performance}, the "w/ LID" column indicates that language identification (LID) information, such as English, Chinese, or Korean, is included as part of the decoding prompt, while the "w/o LID" column denotes results without the additional LID information.
 Results in parentheses are directly cited from the papers.
 
-As shown in Table \ref{tab:multilingual_asr_performance}, ***MinMo*** achieves superior ASR performance on most test sets across various languages, compared to [Whisper Large v3](2022.12.06_Whisper.md) and [Qwen2-Audio](2024.07.15_Qwen2-Audio.md).
+As shown in Table \ref{tab:multilingual_asr_performance}, ***MinMo*** achieves superior ASR performance on most test sets across various languages, compared to [Whisper Large v3](../SpeechLM/2022.12.06_Whisper.md) and [Qwen2-Audio](2024.07.15_Qwen2-Audio.md).
 
 The "w/ LID" columns for Whisper Large-v3 and Qwen2-Audio show similar results to those reported in the original papers.
 Testing on Common Voice with or without LID information as a prompt shows a significant gap in average error rates for Whisper Large v3 and Qwen2-Audio, indicating that these two models strongly depend on the LID information.
@@ -491,14 +549,14 @@ The final results demonstrate that ***MinMo*** performs better in the subjective
 To evaluate the synthesis accuracy of our voice decoder, we converted the recent SEED test set \citep{seed-tts} into the ChatLM format.
 In this format, the text is presented as the user content prefixed with a "Copy:" command, and the LLM is expected to replicate this text.
 The test set comprises 2,020 cases in Chinese and 1,088 cases in English.
-For the Chinese cases, we utilized the Paraformer-zh model \citep{Paraformer}, while the English cases were processed using [Whisper-large V3](2022.12.06_Whisper.md).
+For the Chinese cases, we utilized the Paraformer-zh model \citep{Paraformer}, while the English cases were processed using [Whisper-large V3](../SpeechLM/2022.12.06_Whisper.md).
 Given the instruction non-following issue with LLMs, we applied a teacher forcing scheme during inference to minimize discrepancies between the input and output text.
 The content consistency of the voice decoder was evaluated using CER for Chinese and WER for English.
 
 Our findings indicate that even with the teacher forcing scheme, only about 20\% of the test cases had identical input and output text from the LLM.
 Because inconsistent input and output can lead to confused hidden states for the voice decoder, only test cases with consistent input-output text were included for error rate calculation.
 The results are presented in Table \ref{tab:tts}.
-We observed that ***MinMo***'s voice decoder has slightly reduced content consistency and speech quality on the Chinese test sets compared to the TTS baseline, [CosyVoice 2.0-SFT](2024.12.13_CosyVoice2.md).
+We observed that ***MinMo***'s voice decoder has slightly reduced content consistency and speech quality on the Chinese test sets compared to the TTS baseline, [CosyVoice 2.0-SFT](../SpeechLM/2024.12.13_CosyVoice2.md).
 On the English test set, ***MinMo*** achieves similar content consistency but with a slightly lower NMOS score.
 This reduction can be attributed to the differing acoustic characteristics of the fine-tuned speakers, which affect both the recognition model and NMOS scorer.
 However, this reduction does not significantly hinder human understanding.
@@ -525,7 +583,7 @@ These datasets are employed to assess the model's knowledge question-answering a
 The baseline results for these datasets are taken from the original table of the respective papers.
 It is noteworthy that, due to the absence of a publicly available specific test set for the Trivia QA, we adhere to the GLM configuration by randomly selecting 1,000 samples from the validation set of web questions as our test set.
 However, because of the inconsistency in test samples, the results on Trivia QA are not guaranteed to be absolutely comparable and should be considered as reference only.
-Additionally, since the original format of these three datasets is text-based, during testing, we use [CosyVoice 2](2024.12.13_CosyVoice2.md) to perform TTS synthesis on the input question texts.
+Additionally, since the original format of these three datasets is text-based, during testing, we use [CosyVoice 2](../SpeechLM/2024.12.13_CosyVoice2.md) to perform TTS synthesis on the input question texts.
 
 As illustrated in the table~\ref{tab:s2t_chat_moshi}, the ***MinMo*** model demonstrates a significant advantage over existing baselines in the Speech-to-Speech (S2S) mode, achieving new state-of-the-art (SOTA) results.
 In the Speech-to-Text (S2T) mode, it also attains SOTA performance on the Llama Question and Web Question datasets.
