--- a/Models/SpokenDialogue/2025.01.20_MinMo.md
+++ b/Models/SpokenDialogue/2025.01.20_MinMo.md
@@ -111,10 +111,10 @@ These models typically use a decoder-only Transformer as the backbone to simulta
 These models suffer from two major limitations.
 Firstly, after speech discretization, speech token sequences are often more than twice the length of text (e.g., 12.5 tokens per second in Moshi).
 This discrepancy in sequence length poses challenges as model sizes grow, such as the 175B [GPT-3](../TextLM/2020.05.28_GPT-3.md).
-Secondly, the scarcity of speech data compared to text leads to highly imbalanced speech-text training data and in turn causes catastrophic forgetting ([Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md)).
+Secondly, the scarcity of speech data compared to text leads to highly imbalanced speech-text training data and in turn causes catastrophic forgetting ([Freeze-Omni](2024.11.01_Freeze-Omni.md)).
 
 The second category includes **aligned multimodal models**, integrating voice capabilities while aiming to maintain the capabilities of the existing pre-trained text LLM.
-This results in intermediate outputs that still contain text, as seen in models such as [LLaMA-Omni](2024.09.10_LLaMA-Omni.md) and [Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md).
+This results in intermediate outputs that still contain text, as seen in models such as [LLaMA-Omni](2024.09.10_LLaMA-Omni.md) and [Freeze-Omni](2024.11.01_Freeze-Omni.md).
 However, these alignment-based models are typically trained on limited speech data (200K samples for LLaMA-Omni and 120K hours for Freeze-Omni), leading to questions on the impact of larger speech datasets on model capabilities and whether the chat capabilities of the original text-LLM might be compromised.
 Furthermore, investigation of extensive speech tasks has not been conducted on these models, such as speech translation, emotion recognition, speaker analysis, language identification, and audio event detection.
 Moreover, these models lack systematic evaluations of instruction-following capabilities for rich and nuanced speaking styles, as well as lacking development and evaluation of full-duplex conversation capabilities, for achieving seamless voice interaction.
@@ -162,8 +162,8 @@ For ***MinMo***, the speech-to-text latency is approximately 100ms; the full-dup
   - 特点: 通常使用仅解码器的 Transformer 架构作为主干, 在单个框架内同时对语音和文本模态进行理解和生成, 它们通常需要使用语音和文本数据进行预训练.
   - 缺点: 它们有两个主要的局限性.
     - 在语音离散化后, 语音 Token 序列通常是文本长度的两倍 (如 Moshi 的 12.5 个 Token/秒). 这一序列长度的差异随着模型尺寸增长会带来挑战, 如 175B [GPT-3](../TextLM/2020.05.28_GPT-3.md).
-    - 与文本相比, 语音数据稀缺, 导致语音-文本训练数据的高度失衡, 从而导致灾难性遗忘 ([Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md)).
-- 对齐多模态模型, 如 [LLaMA-Omni](2024.09.10_LLaMA-Omni.md) 和 [Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md)
+    - 与文本相比, 语音数据稀缺, 导致语音-文本训练数据的高度失衡, 从而导致灾难性遗忘 ([Freeze-Omni](2024.11.01_Freeze-Omni.md)).
+- 对齐多模态模型, 如 [LLaMA-Omni](2024.09.10_LLaMA-Omni.md) 和 [Freeze-Omni](2024.11.01_Freeze-Omni.md)
   - 特点: 集成语音能力但目标是维持现有预训练文本大语言模型的能力. 这使得模型中间输入仍然包含文本.
   - 缺点:
     - 这些基于对齐的模型通常在有限的语音数据 (LLaMA-Omni 200K 样本, Freeze-Omni 120K 小时) 上进行训练, 引发了更大的语音数据及对模型能力影响的疑问, 以及原始文本大语言模型的对话能力是否有所损害.
@@ -208,7 +208,7 @@ For ***MinMo***, the speech-to-text latency is approximately 100ms; the full-dup
 
 A variety of speech foundation models have been developed for generic audio understanding, but not systematically explored for voice interaction.
 For example, [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) integrates Whisper speech encoder with a pre-trained text LLM and adapts the LLM for speech understanding capabilities through multi-task pre-training and instruction-based supervised fine-tuning.
-[SALMONN](../SpokenDialogue/2023.10.20_SALMONN.md) is another speech-text LLM for generic audio understanding, by integrating separate speech and audio encoders with a pre-trained text LLM through Q-Former and adopting LoRA for modality alignment.
+[SALMONN](2023.10.20_SALMONN.md) is another speech-text LLM for generic audio understanding, by integrating separate speech and audio encoders with a pre-trained text LLM through Q-Former and adopting LoRA for modality alignment.
 
 Since this work aims to develop an end-to-end multimodal model for seamless voice interaction, we focus on comparing ***MinMo*** to speech-text models for voice interaction (or called multimodal spoken dialogue models).
 Contemporaneously or inspired by GPT-4o, there have been active developments of multimodal spoken dialogue models managing to achieve real-time voice conversations with user.
@@ -218,7 +218,7 @@ These models include collaborative systems and end-to-end frameworks.
 [PSLM](2024.06.18_PSLM.md) is a collaborative system since it replies on ASR to process audio input, which discards paralinguistic information and causes error propagation.
 PSLM generates speech and text tokens in parallel hence it reduces the speech generation latency; however, it suffers from reduced response quality.
 Different from the collaborative systems such as PSLM, end-to-end frameworks directly accept audio input and generate audio output.
-[LLaMA-Omni](2024.09.10_LLaMA-Omni.md) and [Mini-Omni](../SpokenDialogue/2024.08.27_Mini-Omni.md) are two recent end-to-end frameworks that have not been trained for full-duplex communication.
+[LLaMA-Omni](2024.09.10_LLaMA-Omni.md) and [Mini-Omni](2024.08.27_Mini-Omni.md) are two recent end-to-end frameworks that have not been trained for full-duplex communication.
 LLaMA-Omni integrates Whisper speech encoder, speech adapter, streaming speech decoder, and vocoder with a pre-trained text LLM backbone.
 The speech decoder generates discrete units corresponding to generated text prefix in an NAR manner.
 The model is trained with a two-stage strategy: in the first stage, the speech encoder is frozen, and the speech adapter and LLM are trained autoregressively; in the second stage, the speech encoder, speech adapter, and LLM are frozen and only the speech decoder is trained using the CTC loss.
@@ -229,7 +229,7 @@ Mini-Omni simultaneously generates text and audio tokens, while padding N tokens
 
 Our ***MinMo*** facilitates full-duplex spoken dialogues.
 Existing full-duplex voice chat systems can also be categorized into collaborative systems and end-to-end models.
-Among collaborative systems, [VITA](../SpokenDialogue/2024.08.09_VITA.md) runs two models at the same time, namely, the generation model and the monitoring model, to support full-duplex communication.
+Among collaborative systems, [VITA](2024.08.09_VITA.md) runs two models at the same time, namely, the generation model and the monitoring model, to support full-duplex communication.
 When the generation model is generating system response, the monitoring model monitors the environment and once it detects effective user interruption, it combines context and provides response to the new user query, while the generation model pauses and switches to the monitoring role.
 Notably, VITA still relies on an external TTS module to generate speech output.
 Alternatively, [another collaborative system](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md) operates with LLM interfacing with an ASR module and a streaming TTS module.
@@ -238,20 +238,20 @@ All these tasks are defined as next token prediction on a serialized, single-str
 Full-duplex dialogue learning is conducted on data synthesized by GPT-4 to generate dialogues with different types of user interruptions.
 Notably, with its cascaded architecture, this system suffers from high latency up to 680ms.
 
-Among end-to-end full-duplex models, the early work of [dGSLM](../SpokenDialogue/2022.03.30_dGSLM.md) proposes a Siamese architecture to jointly process both audio token streams of user speech and system speech.
+Among end-to-end full-duplex models, the early work of [dGSLM](2022.03.30_dGSLM.md) proposes a Siamese architecture to jointly process both audio token streams of user speech and system speech.
 However, it suffers from several weaknesses: it relies on speech-only training, hence does not leverage capabilities of a pre-trained text LLM; it only uses semantic tokens, hence does not sufficiently model acoustic information; it does not support online mode.
 [LSLM](2024.08.05_LSLM.md) uses a decoder-only Transformer to generate speaking tokens and a streaming SSL encoder to process listening tokens.
 It introduces an interruption token to stop speaking when detecting a turn-taking attempt from the user.
 However, the model is insufficient in generating reasonable responses.
 Among the more recent end-to-end full-duplex models, [Moshi](2024.09.17_Moshi.md), [GLM-4-Voice](2024.12.03_GLM-4-Voice.md), [SyncLM](2024.09.23_SyncLLM.md), [IntrinsicVoice](2024.10.09_IntrinsicVoice.md), and [Omni-Flatten](2024.10.23_OmniFlatten.md) are **native multimodal models**.
 They simultaneously model understanding and generation of both speech and text modalities within a single framework, based on a GPT backbone, and require self-supervised autoregressive pre-training using both speech and text data.
-As discussed in Section~\ref{sec:intro}, these native multimodal models need to tackle the challenges due to significant discrepancy between sequence lengths of speech tokens and text tokens, and also highly imbalanced speech-text training data and the resulting catastrophic forgetting.
+As discussed in Introduction, these native multimodal models need to tackle the challenges due to significant discrepancy between sequence lengths of speech tokens and text tokens, and also highly imbalanced speech-text training data and the resulting catastrophic forgetting.
 IntrinsicVoice employs a GroupFormer to generate HuBERT tokens from the LLM’s hidden states, effectively shortening speech sequences to lengths comparable to text sequences.
 OmniFlatten utilizes a multi-stage progressive post-training strategy that incorporates a chunk-based flattened single stream of speech tokens and text tokens to learn full-duplex and text-free speech-to-speech interaction.
-Different from these native multimodal models, our ***MinMo*** is in the category of **aligned multimodal models**, which also include LLaMA-Omni, [Mini-Omni2](2024.10.15_Mini-Omni2.md), and [Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md).
+Different from these native multimodal models, our ***MinMo*** is in the category of **aligned multimodal models**, which also include LLaMA-Omni, [Mini-Omni2](2024.10.15_Mini-Omni2.md), and [Freeze-Omni](2024.11.01_Freeze-Omni.md).
 Aligned multimodal models integrate voice capabilities while aiming to maintain the capabilities of the existing pre-trained text LLM.
 Mini-Omni2 introduces a command-based interruption mechanism for supporting full-duplex conversation; however, it is only evaluated on the ASR task and compared to Whisper, VITA, and Mini-Omni.
-[Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md) is a speech-to-speech model that freezes the pre-trained text LLM to reserve the LLM's capabilities.
+[Freeze-Omni](2024.11.01_Freeze-Omni.md) is a speech-to-speech model that freezes the pre-trained text LLM to reserve the LLM's capabilities.
 It supports streaming input speech and generates streaming output speech, uses multi-task training, and conducts chunk-level state prediction for modeling full-duplex voice interaction.
 Our ***MinMo*** differs from these aligned multimodal models in the following ways.
 We explore training ***MinMo*** on much larger speech datasets (1.4 million hours of diverse speech data in contrast to 200K samples for LLaMA-Omni and 120K hours for Freeze-Omni) and on much more extensive speech tasks.
@@ -271,11 +271,12 @@ We explore training ***MinMo*** on much larger speech datasets (1.4 million hour
 有一些工作支持传统的轮次声音聊天 (即半双工通信), 但不能处理全双工声音互动 (即同时双向通信).
 这些模型包括 **协作 (Collaborative) 系统** 和 **端到端 (End-to-End) 框架**.
 
+**协作系统**:
 - [PSLM](2024.06.18_PSLM.md) 是一个协作系统因为它依赖于 ASR 来处理音频输入, 这会丢弃副语言信息并导致错误传播. PSLM 并行地生成语音和文本 Token, 因此减少了语音生成延迟.
 
-与如 PSLM 这样的协作系统不同, 端到端框架直接接受音频输入并生成音频输出.
-[LLaMA-Omni](2024.09.10_LLaMA-Omni.md) 和 [Mini-Omni](../SpokenDialogue/2024.08.27_Mini-Omni.md) 是两个近期的端到端框架, 但还没有针对全双工通信进行训练.
+**端到端框架** (直接接受音频输入并生成音频输出):
 
+- [LLaMA-Omni](2024.09.10_LLaMA-Omni.md) 和 [Mini-Omni](2024.08.27_Mini-Omni.md) 是两个近期的端到端框架, 但还没有针对全双工通信进行训练.
 - LLaMA-Omni 将 Whisper 语音编码器, 语音适配器, 流式语音解码器, 声码器和预训练文本大语言模型骨干集成在一起.
 语音解码器生成离散单元, 对应于以 NAR 方式生成文本前缀.
 模型以两阶段策略训练:
@@ -287,8 +288,44 @@ LLaMA-Omni 在语音转文本指令跟随和语音转语音指令跟随任务上
 模型通过三阶段进行训练: 模态对齐, 适配器训练, 多模态微调.
 Mini-Omni 同时生成文本和音频 Tokens, 同时填充 N 个 Token 以确保先生成对应的文本 Token 以指导音频 Token 生成.
 
+---
 
+我们的 ***MinMo*** 推进了全双工口语对话.
+现有的全双工声音聊天系统也可以分为**协作系统**和**端到端模型**.
 
+**协作系统**:
+- [VITA](2024.08.09_VITA.md) 同时运行两个模型, 即生成模型和监控模型, 以支持全双工通信.
+  当生成模型正在生成系统响应时, 监控模型负责监控环境, 一旦它检测到有效的用户中断, 它结合上下文并为新的用户查询提供响应, 而生成模型暂停并切换为监控视角.
+  值得注意的是, VITA 仍然依赖于外部的 TTS 模块来生成语音输出.
+- [另一个协作系统](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md) 将 LLM 与 ASR 模块和流式 TTS 模块集成.
+  它并不需要模态对齐, 它按照以下范式在预训练文本 LLM 上进行监督微调:
+  在每个时间步, LLM 要么处理输入 Token 要么生成文本 Token, 要么输出特殊控制 Token 用于 SPEAK 和 LISTEN 之间的状态转移.
+  所有这些任务被定义为在一个序列化单流视角下的对话上的 Next Token Prediction.
+  全双工对话学习则通过 GPT-4 生成具有不同类型用户中断的对话来进行数据合成.
+  值得注意的是, 由于采用了级联架构, 这一系统的延迟高达 680ms.
+
+**端到端模型**:
+- [dGSLM](2022.03.30_dGSLM.md) 作为早期工作提出了孪生架构来联合处理用户语音和系统语音的音频 Token 流.
+然而它有几个弱点: 依赖于仅语音训练, 因此没有利用预训练文本 LLM 的能力; 只使用了语义 Token 因此没有充分建模声学信息; 不支持在线模式.
+- [LSLM](2024.08.05_LSLM.md) 使用仅解码器的 Transformer 生成说话的 Token, 并使用流式 SSL 编码器处理听取的 Token.
+  它引入了中断 Token 来当检测到用户试图轮次切换时停止说话.
+  然而, 模型在生成合理响应方面不足.
+
+- 在更近期的端到端全双工模型中, [Moshi](2024.09.17_Moshi.md), [GLM-4-Voice](2024.12.03_GLM-4-Voice.md), [SyncLM](2024.09.23_SyncLLM.md), [IntrinsicVoice](2024.10.09_IntrinsicVoice.md), 和 [Omni-Flatten](2024.10.23_OmniFlatten.md) 是**原生多模态模型**.
+  它们在基于 GPT 骨干的单个框架中同时建模语音和文本模态的理解和生成, 需要语音和文本数据进行自监督自回归预训练.
+  如在引言中讨论的那样, 这些原生多模套模型需要处理由于语音 Token 和文本 Token 序列长度的显著不同带来的挑战, 以及高度不平衡的语音文本训练数据, 和导致的灾难性遗忘.
+- IntrinsicVoice 使用 GroupFormer 从 LLM 的隐藏状态生成 HuBERT Token, 有效缩短语音序列长度到与文本序列长度相当.
+- OmniFlatten 采用多阶段逐步后训练策略, 融合了分块平铺的单流语音 Token 和文本 Token 来学习全双工和无文本语音到语音交互.
+
+和这些原生多模态模型不同, 我们的 ***MinMo*** 属于**对齐多模态模型**, 同类模型有 LLaMA-Omni, [Mini-Omni2](2024.10.15_Mini-Omni2.md), 和 [Freeze-Omni](2024.11.01_Freeze-Omni.md).
+对齐多模态模型在集成声音能力的同时维持现有预训练文本大语言模型的能力.
+- Mini-Omni2 引入了基于命令的中断机制以支持全双工对话, 然而, 它只在 ASR 上评估, 和 Whisper, VITA, Mini-Omni 进行对比.
+- [Freeze-Omni](2024.11.01_Freeze-Omni.md) 是语音到语音模型, 将预训练文本 LLM 冻结来保留 LLM 的能力.
+  它支持流式语音输入和输出, 使用多任务训练并构建了分块级别的状态预测以建模全双工声音交互.
+
+我们的 ***MinMo*** 和这些对齐多模态模型在以下方面有所不同:
+- 我们在大得多的语音数据集 (1.4 百万小时的多样语音数据) 和更广泛的语音任务上训练 (LLaMA-Omni 使用了 200K 样本, Freeze-Omni 使用了 120K 小时).
+- 我们采用了新式语音解码器, 增强了指令跟随能力, 实现了对全双工口语对话能力的系统性训练和评估.
 
 ### Text Style-Controllable Speech Synthesis: 文本风格可控语音合成
 
@@ -614,7 +651,7 @@ The speech2text data is primarily divided into two parts.
 First, it originates from open-source multi-turn text-only data, where we synthesize the user turns using zero-shot Text-to-Speech (TTS) technology.
 Second, we use real Automatic Speech Recognition (ASR) training data as chat queries to obtain text responses from the large model, thereby generating interactive training data for speech2text.
 
-To evaluate the question-answering capabilities of ***MinMo*** in the speech modality, we initially utilize three datasets, namely Llama Questions ~\citep{nachmani2024spokenquestionansweringspeech}, Trivia QA ~\citep{joshi2017triviaqalargescaledistantly}, and Web Questions ~\citep{DBLP:conf/emnlp/BerantCFL13}, similar to the approach by [Moshi](2024.09.17_Moshi.md), [GLM-4-Voice](2024.12.03_GLM-4-Voice.md) and [Freeze-Omni](../SpokenDialogue/2024.11.01_Freeze-Omni.md).
+To evaluate the question-answering capabilities of ***MinMo*** in the speech modality, we initially utilize three datasets, namely Llama Questions ~\citep{nachmani2024spokenquestionansweringspeech}, Trivia QA ~\citep{joshi2017triviaqalargescaledistantly}, and Web Questions ~\citep{DBLP:conf/emnlp/BerantCFL13}, similar to the approach by [Moshi](2024.09.17_Moshi.md), [GLM-4-Voice](2024.12.03_GLM-4-Voice.md) and [Freeze-Omni](2024.11.01_Freeze-Omni.md).
 These datasets are employed to assess the model's knowledge question-answering ability in both speech-to-text and speech-to-speech modes.
 The baseline results for these datasets are taken from the original table of the respective papers.
 It is noteworthy that, due to the absence of a publicly available specific test set for the Trivia QA, we adhere to the GLM configuration by randomly selecting 1,000 samples from the validation set of web questions as our test set.
