--- a/Models/SpokenDialogue/2025.01.20_MinMo.md
+++ b/Models/SpokenDialogue/2025.01.20_MinMo.md
@@ -329,6 +329,9 @@ Mini-Omni 同时生成文本和音频 Tokens, 同时填充 N 个 Token 以确保
 
 ### Text Style-Controllable Speech Synthesis: 文本风格可控语音合成
 
+<details>
+<summary>展开原文</summary>
+
 A distinctive feature of multimodal spoken dialogue models, compared to text-based dialogue models, is their ability to comprehend and generate acoustic information beyond mere textual content.
 The speech modality not only contains the content but also acoustic information such as emotion, dialect, and speaking rate.
 An intelligent multimodal spoken dialogue model should be able to comprehensively understand the acoustic information in input speech (e.g., emotion) and also ideally generate responses with specified emotions, dialects, and speaking rate, as well as mimicking specific voices, so that the system can achieve a deeper level of understanding and response in communication.
@@ -338,9 +341,24 @@ Significant progresses have been made in text-style controllable TTS, such as [S
 In contrast to these collaborative systems, [Moshi](2024.09.17_Moshi.md) uses a TTS engine with a single actor's voice and recorded monologues in over 70 speaking styles to synthesize training data to support understanding and generation of acoustic information in an end-to-end model.
 [GLM-4-Voice](2024.12.03_GLM-4-Voice.md) employs high-quality, multi-turn spoken dialogues tailored to specific speech style requirements, such as speaking rate, emotion, or dialect, to support style-controllable spoken dialogues.
 However, to the best of our knowledge, no previous work has demonstrated that aligned multimodal models can support style-controllable voice generation.
-Contrary to previous claims that aligned multimodal models such as LLaMA-Omni and Freeze-Omni only allow language models to control the content of speech but not the style and prosody ([GLM-4-Voice](2024.12.03_GLM-4-Voice.md)), in this work, we propose a novel streaming voice decoder for the aligned multimodal model .
-***MinMo*** and find that this decoder enhances instruction-following capabilities and enables .
-***MinMo*** to generate speech corresponding to user-specified emotions, dialects, speaking rates, as well as mimicking specific voices.
+Contrary to previous claims that aligned multimodal models such as LLaMA-Omni and Freeze-Omni only allow language models to control the content of speech but not the style and prosody ([GLM-4-Voice](2024.12.03_GLM-4-Voice.md)), in this work, we propose a novel streaming voice decoder for the aligned multimodal model ***MinMo*** and find that this decoder enhances instruction-following capabilities and enables ***MinMo*** to generate speech corresponding to user-specified emotions, dialects, speaking rates, as well as mimicking specific voices.
+
+</details>
+<br>
+
+相比基于文本的对话模型, 多模态口语对话模型的独特之处在于它们能够理解和生成文本内容之外的声学信息.
+语音模态不仅包含了内容, 好包含了声学信息 (如情感, 方言, 语速等).
+一个智能的多模态口语对话系统应该能够全面地理解输入语音中的声学信息 (如情感), 也能够理想地生成带有指定情感, 方言, 语速等的响应, 并模仿特定声音, 这样系统才能在交流中实现更深层次的理解和响应.
+
+**协作系统** (如 [ParalinGPT](2023.12.23_ParalinGPT.md), [E-Chat](2023.12.31_E-chat.md), 和 [Spoken-LLM](2024.02.20_Spoken-LLM.md)) 引入了副语言特征 (如情感) 来增强对声学信息的理解.
+这些系统可以和风格可控的文本转语音系统结合以生成具有特定情感, 语速, 音量等的响应.
+在风格可控的文本转语音方面已经有了显著的进步, 如 [Salle (TextrolSpeech)](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS](../Acoustic/2022.11.22_PromptTTS.md), [PromptTTS2](../Acoustic/2023.09.05_PromptTTS2.md), [InstructTTS](../Acoustic/2023.01.31_InstructTTS.md), 和 [ControlSpeech](../SpeechLM/2024.06.03_ControlSpeech.md).
+
+和这些协作系统不同, [Moshi](2024.09.17_Moshi.md) 使用了具有一个单独的演员超过 70 种说话风格的声音和录制的独白的 TTS 引擎来合成训练数据, 以支持端到端模型的理解和生成声学信息.
+[GLM-4-Voice](2024.12.03_GLM-4-Voice.md) 采用高质量的多轮口语对话, 针对特定说话风格需求 (如语速, 情感, 方言) 进行了优化, 以支持风格可控的口语对话.
+然而, 到目前为止, 先前的工作都没有表明对齐多模态模型能够支持风格可控的声音生成.
+
+之前的对齐多模态模型 (如 LLaMA-Omni 和 Freeze-Omni) 只允许语言模型控制语音内容, 而不控制风格和语调 ([GLM-4-Voice](2024.12.03_GLM-4-Voice.md)), 在本文中, 我们为对齐多模态模型提出了一个新的流式语音解码器并发现这一解码器增强了指令跟随能力, 并使得 ***MinMo*** 能够生成对应于用户指定的情感, 方言, 语速, 以及模仿特定声音的语音.
 
 ## 3·Methodology: 方法
 
