--- a/Models/SpokenDialogue/2024.08.05_LSLM.md
+++ b/Models/SpokenDialogue/2024.08.05_LSLM.md
@@ -71,16 +71,16 @@ However, these models are limited to text input and output and cannot interact d
 Incorporating spoken and auditory interfaces into conversational AI enhances HCI convenience.
 Leveraging techniques from text LLMs, the speech language model (SLM) processes speech similarly to text.
 This paradigm involves encoding the speech signal into discrete tokens or continuous embeddings, modeling them with a language model, and decoding the speech tokens or embeddings back to the speech signal.
-Some studies ([GSLM [19]](../SpeechLM/2021.02.01_GSLM.md); [pGSLM [17]](../SpeechLM/2021.09.07_pGSLM.md); [dGSLM [26]](../SpeechLM/2022.03.30_dGSLM.md)) utilizes this paradigm for speech continuation, generating expressive speech and natural multi-round dialogue.
+Some studies ([GSLM [19]](../SpeechLM/2021.02.01_GSLM.md); [pGSLM [17]](../SpeechLM/2021.09.07_pGSLM.md); [dGSLM [26]](../SpokenDialogue/2022.03.30_dGSLM.md)) utilizes this paradigm for speech continuation, generating expressive speech and natural multi-round dialogue.
 Other research employs this paradigm to task-specific applications, such as decoder-only high-fidelity TTS ([VALL-E [40]](../SpeechLM/2023.01.05_VALL-E.md); [AudioLM [03]](../SpeechLM/2022.09.07_AudioLM.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.07_CosyVoice.md)) and decoder-only streaming ASR ([Speech ReaLLM [33]](2024.06.13_Speech_ReaLLM.md); [Tsunoo et al.[38]](../ASR/2024.06.23_Decoder-only_Architecture_for_Streaming_E2E_Speech_Recognition.md); [Chen et al.[04]](../ASR/2024.06.27_Streaming_Decoder-Only_ASR_with_Discrete_Speech_Units.md); [BESTOW [08]](2024.06.28_BESTOW.md))
-Moreover, [SpeechGPT [48]](../SpeechLM/2023.05.18_SpeechGPT.md) and [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md) initialize SLMs using LLMs, expanding speech tokens to the LLM vocabulary and continuing training on speech.
+Moreover, [SpeechGPT [48]](../SpokenDialogue/2023.05.18_SpeechGPT.md) and [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md) initialize SLMs using LLMs, expanding speech tokens to the LLM vocabulary and continuing training on speech.
 This empowers SLM to comprehend semantic information and equips SLM with dialogue capability.
 Despite these advances, all these models are limited to turn-based conversations and cannot handle real-time sound or interruptions, limiting their applicability in real-life scenarios.
 
 Interaction and turn-taking are essential abilities for natural communication among humans.
 At the dawn of the end-to-end speech dialogue system explosion, we focus on investigating **Full Duplex Modeling (FDM)** in **interactive Speech Language Models (iSLM)**, a crucial topic affecting user experience.
 [Lin et. al [22]](../_tmp/2022.05.30_Duplex_Conversation.md) proposes to process real-time audio input with a separate comprehension module.
-Other works ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) suggest modifying the order in which text tokens are organized in the LLM to tackle the duplex modeling problem.
+Other works ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](../SpokenDialogue/2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) suggest modifying the order in which text tokens are organized in the LLM to tackle the duplex modeling problem.
 All these models are based on text-centric LLMs that require external ASR and TTS modules for spoken dialogue.
 As a result, latency remains perceivable and the paralinguistic ability is still lacking.
 We believe the FDM capability should be an intrinsic capability of SLMs, enabling simultaneous listening and speaking.
@@ -119,11 +119,11 @@ Experiments indicate that our proposed ***LSLM*** can achieve duplexing capabili
 将语音和听觉接口融入对话 AI 增强了人机交互的便利性。
 利用文本大语言模型的技术, **语音语言模型 (Speech Language Model, SLM)** 以类似文本的方式处理语音.
 这一范式涉及将语音信号编码为离散 Token 或连续嵌入, 用语言模型对其建模, 并将语音 Token 或嵌入解码回语音信号.
-- 一些研究 ([GSLM [19]](../SpeechLM/2021.02.01_GSLM.md); [pGSLM [17]](../SpeechLM/2021.09.07_pGSLM.md); [dGSLM [26]](../SpeechLM/2022.03.30_dGSLM.md)) 利用这一范式进行语音续写, 生成富有表现力的语音和自然的多轮对话.
+- 一些研究 ([GSLM [19]](../SpeechLM/2021.02.01_GSLM.md); [pGSLM [17]](../SpeechLM/2021.09.07_pGSLM.md); [dGSLM [26]](../SpokenDialogue/2022.03.30_dGSLM.md)) 利用这一范式进行语音续写, 生成富有表现力的语音和自然的多轮对话.
 - 其他研究则采用这一范式进行特定任务的应用, 如
   - 基于仅解码器架构的高保真文本转语音 ([VALL-E [40]](../SpeechLM/2023.01.05_VALL-E.md); [AudioLM [03]](../SpeechLM/2022.09.07_AudioLM.md)；[Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.07_CosyVoice.md));
   - 仅解码器的流式自动语音识别 ([Speech ReaLLM [33]](2024.06.13_Speech_ReaLLM.md); [Tsunoo et al. [38]](../ASR/2024.06.23_Decoder-only_Architecture_for_Streaming_E2E_Speech_Recognition.md); [Chen et al. [04]](../ASR/2024.06.27_Streaming_Decoder-Only_ASR_with_Discrete_Speech_Units.md); [BESTOW [08]](2024.06.28_BESTOW.md)).
-- 此外, [SpeechGPT [48]](../SpeechLM/2023.05.18_SpeechGPT.md) 和 [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md) 使用 LLM 初始化 SLM, 将语音 Token 扩展到 LLM 词汇表, 并在语音上继续训练.
+- 此外, [SpeechGPT [48]](../SpokenDialogue/2023.05.18_SpeechGPT.md) 和 [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md) 使用 LLM 初始化 SLM, 将语音 Token 扩展到 LLM 词汇表, 并在语音上继续训练.
   这使得 SLM 能够理解语义信息, 并赋予 SLM 对话的能力.
 
 尽管取得了这些进展, 但所有这些模型都局限于轮次对话, 无法处理实时声音或中断, 限制了它们在现实场景中的应用.
@@ -133,7 +133,7 @@ Experiments indicate that our proposed ***LSLM*** can achieve duplexing capabili
 注: 双工 (Duplex) 是通信术语, 指的是在通信系统中, 信息可以在两个方向上同时传输的能力. 全双工为双方可同时传输和接收信息, 半双工为双方轮流发送和接收信息, 无法同时进行.
 
 - [Lin et al. [22]](../_tmp/2022.05.30_Duplex_Conversation.md) 提出用一个单独的理解模块处理实时音频输入.
-- 其他工作 ([Zhang et al. [49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md)；[Wang et al. [41]](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) 建议修改 LLM 中文本 Token 的组织顺序以解决全双工建模问题.
+- 其他工作 ([Zhang et al. [49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md)；[Wang et al. [41]](../SpokenDialogue/2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) 建议修改 LLM 中文本 Token 的组织顺序以解决全双工建模问题.
 
 所有这些模型都基于以文本为中心的大语言模型, 需要外部 ASR 和 TTS 模块进行语音对话.
 因此, 延迟仍然可感知, 副语言能力仍然不足.
@@ -187,10 +187,10 @@ Simplex SLMs, depicted in Figure.01(A) and Figure.01(B), are limited to a single
 With the assistance of LLM, simplex SLMs exhibit strong understanding capabilities.
 Representative works include LLM-based ASR ([Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md)), LLM-based speech translation ([COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md)), and LLM-based speech emotion understanding ([SECap [44]](../SpeechRepresentation/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../SpeechRepresentation/2024.07.10_AffectGPT.md)).
 Similarly, simplex SLMs have demonstrated robust generation capabilities, as seen in LLM-based TTS ([LLM&VALL-E [15]](2023.12.30_LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md)).
-Some research leverages the powerful in-context learning capabilities of LLMs to extend task-specific abilities to more universal applications, such as speech understanding ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), audio understanding ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)), or both ([SALMONN [35]](../SpeechLM/2023.10.20_SALMONN.md); [Qwen-Audio [09]](../SpeechLM/2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpeechLM/2024.07.15_Qwen2-Audio.md)).
+Some research leverages the powerful in-context learning capabilities of LLMs to extend task-specific abilities to more universal applications, such as speech understanding ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), audio understanding ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)), or both ([SALMONN [35]](../SpokenDialogue/2023.10.20_SALMONN.md); [Qwen-Audio [09]](2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)).
 Despite their growing power and versatility, simplex SLMs are limited to one-way communication (either human $\rightarrow$ machine or machine $\rightarrow$ human).
 LLMs have facilitated a paradigm shift from simplex models to half-duplex models, also known as turn-based models, as shown in Figure.01(C).
-Prominent models include [SpeechGPT [48]](../SpeechLM/2023.05.18_SpeechGPT.md), [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md), and [VioLA [42]](../SpeechLM/2023.05.25_VioLA.md).
+Prominent models include [SpeechGPT [48]](../SpokenDialogue/2023.05.18_SpeechGPT.md), [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md), and [VioLA [42]](../SpeechLM/2023.05.25_VioLA.md).
 While these half duplex models can both listen and speak, they are constrained to performing only one action at the same instant, thus failing to address the turn-taking problem.
 
 </details>
@@ -205,11 +205,11 @@ While these half duplex models can both listen and speak, they are constrained t
 
 类似地, 单工 SLMs 也展现出了稳健的生成能力, 如基于 LLM 的 TTS: [LLM&VALL-E [15]](2023.12.30_LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md).
 
-一些研究利用 LLMs 强大的上下文学习能力以扩展具体任务的能力到更通用的应用, 例如语音理解 ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), 音频理解 ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)) 或两者兼有  ([SALMONN [35]](../SpeechLM/2023.10.20_SALMONN.md); [Qwen-Audio [09]](../SpeechLM/2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpeechLM/2024.07.15_Qwen2-Audio.md)).
+一些研究利用 LLMs 强大的上下文学习能力以扩展具体任务的能力到更通用的应用, 例如语音理解 ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), 音频理解 ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)) 或两者兼有  ([SALMONN [35]](../SpokenDialogue/2023.10.20_SALMONN.md); [Qwen-Audio [09]](2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)).
 
 尽管单工 SLM 在功能和灵活性方面不断增强, 但它们仅限于单向通信 (从人类到机器或从机器到人类).
 LLM 促进了从单工模型到半双工模型 (回合制模型) 的范式变化.
-突出的模型包括 [SpeechGPT [48]](../SpeechLM/2023.05.18_SpeechGPT.md), [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md), [VioLA [42]](../SpeechLM/2023.05.25_VioLA.md).
+突出的模型包括 [SpeechGPT [48]](../SpokenDialogue/2023.05.18_SpeechGPT.md), [LauraGPT [05]](../SpeechLM/2023.10.07_LauraGPT.md), [VioLA [42]](../SpeechLM/2023.05.25_VioLA.md).
 尽管这些半双工模型能够同时听和说, 但它们在同一时刻只能执行一个动作, 因此无法解决轮次转换问题.
 
 ### Full Duplex Speech Language Model: 全双工语音语言模型
@@ -218,7 +218,7 @@ LLM 促进了从单工模型到半双工模型 (回合制模型) 的范式变化
 <summary>展开原文</summary>
 
 Full duplex SLMs, as shown in Figure.01(D), have the capability to listen and speak simultaneously, allowing for turn-taking whenever a human interrupts the machine.
-Recent efforts ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) have attempted to build full duplex capabilities on text-centric LLMs with cascade ASR and TTS modules.
+Recent efforts ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](../SpokenDialogue/2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) have attempted to build full duplex capabilities on text-centric LLMs with cascade ASR and TTS modules.
 Cutting-edge products like [GPT-4o](https://openai.com/index/hello-gpt-4o) and [Moshi](https://moshi.chat) exhibit full duplex capability in their spoken dialogue systems.
 Despite these advancements, there are no publicly available open-source models or detailed analyses of full duplex SLMs.
 This gap highlights the need for further research and development to fully understand and optimize full duplex capability in speech language models.
@@ -227,7 +227,7 @@ This gap highlights the need for further research and development to fully under
 <br>
 
 全双工语音语言模型具有同时听说的能力, 允许人类打断机器时进行轮次转换.
-近期的努力 ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) 试图在以文本为中心的 LLM 结合级联 ASR 和 TTS 模块构建全双工能力.
+近期的努力 ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](../SpokenDialogue/2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) 试图在以文本为中心的 LLM 结合级联 ASR 和 TTS 模块构建全双工能力.
 尖端产品如 [GPT-4o](https://openai.com/index/hello-gpt-4o) 和 [Moshi](https://moshi.chat) 在其语音对话系统中展示了全双工能力.
 尽管有了这些进展, 但目前还没有公开可用的开源模型或全双工 SLM 的详细分析.
 这一差距凸显了进一步研究和开发以完全理解和优化语音语言模型中全双工能力的需求.
