--- a/Models/SpokenDialogue/2023.05.24_Spectron.md
+++ b/Models/SpokenDialogue/2023.05.24_Spectron.md
@@ -28,13 +28,27 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 We present ***Spectron***, a novel approach to adapting pre-trained large language models (LLMs) to perform spoken question answering (QA) and speech continuation.
 By endowing the LLM with a pre-trained speech encoder, our model becomes able to take speech inputs and generate speech outputs.
 The entire system is trained end-to-end and operates directly on spectrograms, simplifying our architecture.
-Key to our approach is a training objective that jointly supervises speech recognition, text continuation, and speech synthesis using only paired speech-text pairs, enabling a `cross-modal' chain-of-thought within a single decoding pass.
+Key to our approach is a training objective that jointly supervises speech recognition, text continuation, and speech synthesis using only paired speech-text pairs, enabling a 'cross-modal' chain-of-thought within a single decoding pass.
 Our method surpasses existing spoken language models in speaker preservation and semantic coherence.
 Furthermore, the proposed model improves upon direct initialization in retaining the knowledge of the original LLM as demonstrated through spoken QA datasets.
 We release our audio samples ([this https URL](https://michelleramanovich.github.io/spectron/spectron)) and spoken QA dataset ([this https URL](https://github.com/google-research-datasets/LLAMA1-Test-Set)).
+
+</details>
+<br>
+
+我们展示了 ***Spectron***, 一种用于将预训练大语言模型适应于进行口语问答和语音续写的新方法.
+通过赋予 LLM 以预训练语音编码器, 我们的模型变得能够接受语音输入并生成语音输出.
+整个系统以端到端进行训练, 并直接在频谱图上运行, 简化了架构.
+我们的方法的关键在于训练目标, 它仅使用语音-文本对来联合监督语音识别, 文字续写和语音合成, 实现了单个解码过程中的 '跨模态' 思维链.
+我们的方法在说话人保留和语义一致性上超越了现有的口语语言模型.
+此外, 所提出的模型在保留原始 LLM 的知识方面优于直接初始化, 这在口语问答数据集上得到了验证.
+我们发布了音频样本 ([this https URL](https://michelleramanovich.github.io/spectron/spectron)) 和口语问答数据集 ([this https URL](https://github.com/google-research-datasets/LLAMA1-Test-Set)).
 
 ## 1·Introduction: 引言
 
