--- a/Blogs/林唯秀/2024.05.27_一文教你看懂GPT-4o背后的语音技术.md
+++ b/Blogs/林唯秀/2024.05.27_一文教你看懂GPT-4o背后的语音技术.md
@@ -85,7 +85,7 @@ GPT-4o 是一个 any2any 的多模态模型, 能够接受文本, 音频, 图像,
 上一部分介绍的预训练模型做的是上下文关系的预训练, 学习到的表征主要包含与上下文相关的语义信息.
 
 要想将语音的 Token 还原成为真正具有真人表现力的信号, 还需要有包含音色, 韵律, 语速等副语言信息的声学特征.
-声学特征的学习在很大程度上参考了图像领域的工作, 用到的主要是类似于 [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md), [VQGAN](../../Models/_Basis/2020.12.17_VQGAN.md) 等的离散化压缩方法, 并针对语音数据的特性做了优化.
+声学特征的学习在很大程度上参考了图像领域的工作, 用到的主要是类似于 [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md), [VQGAN](../../Modules/VQ/2020.12.17_VQGAN.md) 等的离散化压缩方法, 并针对语音数据的特性做了优化.
 这一部分比较经典的工作就是 [SoundStream](../../Models/SpeechCodec/2021.07.07_SoundStream.md) 和 [EnCodec](../../Models/SpeechCodec/2022.10.24_EnCodec.md), 二者的工作高度类似, 我们放在一起来看.
 
 说到压缩, 最先想到的模型当然就是 AutoEncoder (自编码器).
